# pycvcam

./: .buildinfo  .bumpver.toml  Makefile  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  sg_execution_times.html  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  sg_execution_times.doctree  usage.doctree
_autosummary/: pycvcam.Cv2Distortion._compute_tilt_matrix.html  pycvcam.Cv2Distortion._inverse_transform.html  pycvcam.Cv2Distortion._inverse_transform_opencv.html  pycvcam.Cv2Distortion._transform.html  pycvcam.Cv2Distortion._transform_opencv.html  pycvcam.Cv2Distortion.k1.html  pycvcam.Cv2Distortion.k2.html  pycvcam.Cv2Distortion.k3.html  pycvcam.Cv2Distortion.k4.html  pycvcam.Cv2Distortion.k5.html  pycvcam.Cv2Distortion.k6.html  pycvcam.Cv2Distortion.p1.html  pycvcam.Cv2Distortion.p2.html  pycvcam.Cv2Distortion.s1.html  pycvcam.Cv2Distortion.s2.html  pycvcam.Cv2Distortion.s3.html  pycvcam.Cv2Distortion.s4.html  pycvcam.Cv2Distortion.tau_x.html  pycvcam.Cv2Distortion.tau_y.html  pycvcam.Cv2Extrinsic._compute_rays.html  pycvcam.Cv2Extrinsic._inverse_transform.html  pycvcam.Cv2Extrinsic._transform.html  pycvcam.Cv2Extrinsic.frame.html  pycvcam.Cv2Extrinsic.from_frame.html  pycvcam.Cv2Extrinsic.from_rt.html  pycvcam.Cv2Extrinsic.from_tmatrix.html  pycvcam.Cv2Extrinsic.rotation_vector.html  pycvcam.Cv2Extrinsic.transformation_matrix.html  pycvcam.Cv2Extrinsic.translation_vector.html  pycvcam.Cv2Intrinsic._inverse_transform.html  pycvcam.Cv2Intrinsic._transform.html  pycvcam.Cv2Intrinsic.focal_length_x.html  pycvcam.Cv2Intrinsic.focal_length_y.html  pycvcam.Cv2Intrinsic.from_matrix.html  pycvcam.Cv2Intrinsic.intrinsic_matrix.html  pycvcam.Cv2Intrinsic.intrinsic_vector.html  pycvcam.Cv2Intrinsic.principal_point_x.html  pycvcam.Cv2Intrinsic.principal_point_y.html  pycvcam.FisheyeDistortion._cartesian_to_polar.html  pycvcam.FisheyeDistortion._inverse_transform.html  (+95 more)
_docs/: compute_rays.html  cv2_distortion.html  cv2_extrinsic.html  cv2_intrinsic.html  distort_undistort_image.html  distorting_images.html  distorting_points.html  distortion.html  extrinsic.html  fisheye_distortion.html  implemented_distortion.html  implemented_extrinsic.html  implemented_intrinsic.html  intrinsic.html  no_distortion.html  no_extrinsic.html  no_intrinsic.html  optical_flow.html  optimize_input_points.html  optimize_parameters.html  rays.html  (+12 more)
(+539 files in other folders)
