[build-system]
requires = [
  "setuptools>=42",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pycvcam"
requires-python = ">= 3.11"
dynamic = ["version"]
description = "Python Computer Vision Cameras Operations and Models"
license = {file = "LICENSE"}
authors = [
{name = "Artezaru", email = "artezaru.github@proton.me"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "scipy>=1.12",
    "pyzernike-polynomials>=2.3.1",
    "py3dframe>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/Artezaru/pycvcam"
Documentation = "https://Artezaru.github.io/pycvcam"
Source = "https://github.com/Artezaru/pycvcam"
Tracker = "https://github.com/Artezaru/pycvcam/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycvcam", "pycvcam*"]
exclude = ["laboratory", "laboratory.*", "tests", "tests*", "examples", "examples*"]

[tool.setuptools.package-data]
"pycvcam.resources" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "pycvcam.__version__.__version__"}

[project.readme]
file = "README.md"
content-type = "text/markdown"




